# condemned2-glue

./: .gitignore  CMakeLists.txt  README.md  condemned2_glue_config.toml  condemned2_glue_manifest.toml  script_auto_entrypoint.py  script_build.ps1  script_codegen.ps1  script_configure.ps1  script_run.ps1
ghidra_scripts/: CopyAssembly.py  FindJumpCandidates.py  FindSnippet.py  FixThunkFallthrough.py  FixXEXThunkFallthrough.py  SetRexGlueLabels.py
src/: condemned2_glue_app.cpp  condemned2_glue_app.h  condemned2_glue_debug_overlay.cpp  condemned2_glue_debug_overlay.h  condemned2_glue_hooks.cpp  condemned2_glue_logging.h  main.cpp
